--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/0xc14m1z/rkt-js#readme",
   "devDependencies": {
+    "prettier": "3.4.2",
     "rimraf": "6.0.1",
     "typescript": "5.7.2",
     "vitest": "2.1.8"
